added tag endpoints
